velero/backup-all-volumes/.chainsaw-test/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backup-velero-yes
  labels:
    velero-backup-pvc: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: backup-velero-no
