velero/backup-all-volumes/.chainsaw-test/pod-patched01.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
  namespace: backup-velero-yes
  annotations:
    backup.velero.io/backup-volumes: task-pv-storage
spec:
  volumes:
    - name: empty-storage
      emptyDir: {}
    - name: task-pv-storage
      persistentVolumeClaim:
        claimName: mypvc
  containers:
    - name: container01
      image: busybox:1.35
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: task-pv-storage
