velero/backup-all-volumes/.chainsaw-test/podcontroller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: backup-velero-yes
  labels:
    app: busybox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      automountServiceAccountToken: false
      volumes:
        - name: task-pv-storage
          persistentVolumeClaim:
            claimName: mypvc
      containers:
        - name: container01
          image: busybox:1.35
          volumeMounts:
            - mountPath: "/usr/share/nginx/html"
              name: task-pv-storage
