velero/backup-all-volumes/.chainsaw-test/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
  namespace: backup-velero-yes
spec:
  automountServiceAccountToken: false
  volumes:
    - name: empty-storage
      emptyDir: {}
    - name: task-pv-storage
      persistentVolumeClaim:
        claimName: mypvc
  containers:
    - name: container01
      image: busybox:1.35
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: task-pv-storage
---
apiVersion: v1
kind: Pod
metadata:
  name: pod02
  namespace: backup-velero-no
spec:
  automountServiceAccountToken: false
  volumes:
    - name: task-pv-storage
      persistentVolumeClaim:
        claimName: mypvc
  containers:
    - name: container01
      image: busybox:1.35
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: task-pv-storage
---
apiVersion: v1
kind: Pod
metadata:
  name: pod03
  namespace: backup-velero-yes
spec:
  automountServiceAccountToken: false
  volumes:
    - name: task-pv-storage
      persistentVolumeClaim:
        claimName: mypvc
    - name: empty-storage
      emptyDir: {}
    - name: external
      persistentVolumeClaim:
        claimName: external
  containers:
    - name: container01
      image: busybox:1.35
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: task-pv-storage
        - mountPath: "/external"
          name: external
---
apiVersion: v1
kind: Pod
metadata:
  name: pod04
  namespace: backup-velero-yes
spec:
  automountServiceAccountToken: false
  volumes:
    - name: task-pv-storage
      persistentVolumeClaim:
        claimName: mypvc
    - name: external
      persistentVolumeClaim:
        claimName: external
    - name: empty-storage
      emptyDir: {}
  containers:
    - name: container01
      image: busybox:1.35
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: task-pv-storage
        - mountPath: "/external"
          name: external
