velero/backup-all-volumes/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: backup-all-volumes
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
